--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Rock Paper Scissors</h1>
+    <h2>Let The Games Begin</h2>
+    <main>
+        <details id="rules-container">
+            <summary id="select-button">Rules to the game</summary>
+            <div id="options-container" class="hidden">
+                <p>You will be playing against the computer.</p>
+                <p>You can choose between Rock, Paper, and Scissors.</p>
+                <p>The first one to three points wins.</p>
+                <p>Here are the rules to getting a point in the game:</p>
+                <ul>
+                    <li>Rock beats Scissors</li>
+                    <li>Scissors beats Paper</li>
+                    <li>Paper beats Rock</li>
+                </ul>
+                <p>
+                    If the player and computer choose the same option (Ex. Paper and
+                    Paper), then no one gets the point.
+                </p>
+            </div>
+        </details>
+        <div class="playing-container">
+            <div id="player-score">Player Score:</div>
+            <div id="computer-score">Computer Score:</div>
+        </div>
+        <div id="choice-container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="results"></div>
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
