--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RockPaperScissors</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -43,6 +43,6 @@
             <button class="btn" id="reset-game-btn">Play again?</button>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
